@@ -58,6 +58,7 @@ sunuo (0.3.2) unstable; urgency=low
     - Mobile.Stabled: HasStabled(), AddStabled(), RemoveStabled(),
       StabledOrNull
     - Mobile.VisibilityList: ClearVisibilityList()
+    - Mobile.PermaFlags: HasPermaFlags(), IsPermaFlaggedTo()
   * gameplay related bugfixes
     - blank keys should not be able to unlock doors with KeyValue 0 (patch
       from Kai Sassmannshausen)
